--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cereal"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["HeroesGrave <heroesgrave@gmail.com>"]
 description = "A simple data serialisation library"
 repository = "https://github.com/HeroesGrave/cereal"
@@ -13,5 +13,8 @@ keywords = [
 ]
 
 [dev-dependencies.cereal_macros]
-version = "0.1.0"
+version = "0.2.0"
 path = "./plugin/"
+
+[features]
+nightly = [] # Needed for tests.
